--- a/app/views/assessments/_fillup_design.html.erb
+++ b/app/views/assessments/_fillup_design.html.erb
@@ -1,4 +1,38 @@
-<form action="/question" method="post">
+<%if $puzzles%>
+<form action="/edit/<%=$puzzles.id%>" method="post" enctype="multipart/form-data">
+<div class="col-7" id="question_div">
+        <div class="question_type_area">
+        <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
+        <input type="hidden" name="kind_of_question" value="<%=$puzzles.kind_of_question%>">
+        <input type="hidden" name="correct_answer" value="<%=$puzzles.correct_answer%>">
+        <input type="hidden" name="assessments_id" value="<%=$puzzles.assessments_id%>">
+            <div class="ques-icon-div" onclick="uploadPic()"><i class="fa-solid fa-image" id="img-icon"></i>
+           </div>
+           <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."><%= $puzzles.question%></textarea></div>
+           <div  id="f-upload" class="display" style="display: none;"><input type="file" name="images"></div>
+           </div>
+
+        <div class="answer-type-area-fillup">
+        <div class="disp_opts">
+          <div class="quiz_row">
+
+           <div class="disp opt1"><input type="text" name="option1"  placeholder="Type answer here ..." value="<%=$puzzles.answer%>"></div>
+          </div>
+        </div>
+
+        </div>
+        </div>
+    <div class="btn-ques-div">
+      <button id="cancel-btn">Cancel</button>
+      <button type="submit" id="submit-btn">Submit</button></form>
+    </div>
+    </form>
+</div>
+</div>
+</div>
+
+<%else%>
+<form action="/question" method="post" enctype="multipart/form-data">
 <div class="col-7" id="question_div">
         <div class="question_type_area">
         <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
@@ -6,12 +40,10 @@
             <div class="ques-icon-div" onclick="uploadPic()"><i class="fa-solid fa-image" id="img-icon"></i>
            </div>
            <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."></textarea></div>
-           <div  id="f-upload" class="display"><input type="file" name="images"></div>img-icon"></i>
-           <input type="file" id="my_file" style="display: none;" />
+           <div  id="f-upload" class="display" style="display: none;"><input type="file" name="images"></div>
            </div>
-           <div class="ques-textarea-div"><textarea id="text-area-question"name="question" placeholder="Type your question here...."></textarea></div>
-        </div>
-        <div class="answer-type-area">
+
+        <div class="answer-type-area-fillup">
         <div class="disp_opts">
           <div class="quiz_row">
 
@@ -20,15 +52,17 @@
         </div>
 
         </div>
+        </div>
     <div class="btn-ques-div">
       <button id="cancel-btn">Cancel</button>
       <button type="submit" id="submit-btn">Submit</button></form>
     </div>
+    </form>
 </div>
 </div>
 </div>
 
-
+<%end%>
 <script>
 
 function uploadPic(){
