--- a/app/views/assessments/_quiz_template.html.erb
+++ b/app/views/assessments/_quiz_template.html.erb
@@ -1,9 +1,13 @@
+
  <%if $puzzles%>
 <form action="/edit/<%=$puzzles.id%>" method="post" enctype="multipart/form-data">
 <div class="col-7" id="question_div">
 
         <div class="question_type_area">
         <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
+        <input type="hidden" name="kind_of_question" value="<%=$puzzles.kind_of_question%>">
+        <input type="hidden" name="correct_answer" value="<%=$puzzles.correct_answer%>">
+        <input type="hidden" name="assessments_id" value="<%=$puzzles.assessments_id%>">
            <div class="ques-icon-div" onclick="uploadPic()"><i class="fa-solid fa-image" id="img-icon"></i>
            </div>
            <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."><%= $puzzles.question%></textarea></div>
