--- a/app/views/quiz/form.html.erb
+++ b/app/views/quiz/form.html.erb
@@ -1,15 +1,25 @@
 <div class="assessment">
-<form action="/assessment" method="post">
+
+<div class="assessment-form">
+<form action="/assessment" method="post" enctype="multipart/form-data">
    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
-   <input type="text" name="name" placeholder="Assessment name ..." required><br>
-   <textarea placeholder="Assessment description" > </textarea><br>
+   <div class="assessment-details">
+   <input type="text" name="name" placeholder="Assessment name ..." required>
+   <input type="text" name="category"  placeholder="Category"><br>
+   </div>
+   <textarea placeholder="    Assessment description" name="description" > </textarea><br>
 
    <div class="upload">
    <i class="fa-solid fa-image" id="icon"></i><br>
-   <input type="file" class="file-input" title="Select images here"><br>
+   <input type="file"name="images" class="file-input" title="Select images here"><br>
+   </div><br>
+  <button type="submit" class="submit">Next</button>
 
-   </div>
-   <input type="text" name="category"  placeholder="Category">
-   <button type="submit" class="submit">Next</button>
+<br>
+
 </form>
+<div id="create_quiz">
+    <%= image_tag("create_quiz.png", alt: "like", id:"create" ) %>
+   </div>
+</div>
 </div>
