--- a/app/assets/stylesheets/quiz.scss
+++ b/app/assets/stylesheets/quiz.scss
@@ -1,6 +1,7 @@
                         // Place all the styles related to the quiz controller here.
                         // They will automatically be included in application.css.
                         // You can use Sass (SCSS) here: https://sass-lang.com/
+
                         .vertical {
                             border-left: 6px solid #f1eac2;
                             height: 69%;
@@ -224,10 +225,10 @@
                         }
 // game page
 .sidebar {
-    background-color: #2c4c3c;
+    background-color: #428957 ;
     width: 20%;
-    margin-top: 7%;
-    height: 87vh;
+    margin-top: 5%;
+    height: 89vh;
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
     position:fixed;
@@ -238,11 +239,17 @@
     // margin-bottom: 50px;
 }
 .sidebar #sidebar-icon {
-    font-size: 40px;
+    font-size: 20px;
     color: white !important;
 }
-.fa-book-copy {
-    font-size: 40px;
+.sidebar a {
     color: white !important;
+    font-weight: bold;
+    font-size: 20px;
+    margin-left: 20px;
+    text-decoration: none;
+    padding: 10px 10px;
+
 }
+
 
