--- a/app/assets/stylesheets/quiz_design.scss
+++ b/app/assets/stylesheets/quiz_design.scss
@@ -330,7 +330,7 @@
     .question_type_area {
         width: 100%;
         height: 40%;
-        margin-top: 6%;
+        // margin-top: 6%;
         background-color: rgb(227, 255, 223);
         // border: 1px solid rgba(122, 146, 119, 0.751);
         border-radius: 5px;
@@ -551,4 +551,98 @@
     background-color: rgb(227, 255, 223);
     padding: 20px 20px;
     height: 30%;
+}
+.explore {
+    background-color:rgb(227, 255, 223) ;
+    height: 700px;
+    width: 40%;
+    margin-left: 35%;
+    margin-top: 5%;
+    border-radius: 50%;
+
+}
+.explore #create {
+    margin-left: 30%;
+    // height: 600px;
+    // width: 500px;
+    position: relative;
+    margin-bottom: 5%;
+}
+.explore #create-quiz {
+    border:none;
+    outline:none;
+    color: white;
+    background-color:#21502f;
+    font-weight:bold;
+    font-size: 25px;
+    padding: 20px 20px;
+    margin-left: 33%;
+
+    border-radius: 20px;
+    width: 250px;
+
+}
+.library {
+    margin-left: 25%;
+    margin-top: 5%;
+}
+#redirect-btn {
+    width: 5%;
+    height: 5%;
+    text-align: center;
+    margin-left: 90%;
+    margin-top: 5%;
+    border-radius: 20px;
+    border: none;
+    background-color: #21502f;
+    color: white;
+    font-size: 20px;
+}
+.library .library-content {
+    background-color: rgb(227, 255, 223);
+   display: inline-block;
+    margin-left: 10px;
+    height: 300px;
+    width: 300px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    // text-align: center;
+}
+.library .library-img {
+     margin-left:5%;
+    width: 200px;
+    height: 200px;
+
+}
+.library-texts {
+    // display:inline-flex;
+    text-align: right;
+    color:black !important;
+
+}
+.library-texts .head {
+    text-align: left;
+    font-weight: bold;
+    margin-left: 20px;
+    font-size: 20px;
+}
+.library-texts .count {
+    text-align: left;
+    // font-weight: bold;
+    // font-size: 0px;
+    margin-top: -40px;
+    margin-left: 10px;
+}
+.library-content .quiz-start {
+    padding: 10px 10px;
+    // margin-top: -50%;
+    border: none;
+    outline:none;
+    border-radius: 10px;
+    margin-left: 200px;
+    background-color: #21502f;
+    color:white;
+    font-weight: bold;
+
+
 }
