--- a/app/views/assessments/game_pin.html.erb
+++ b/app/views/assessments/game_pin.html.erb
@@ -1,14 +1,15 @@
-<div>
+<div id="gamepin-form">
 <%= $random_no%>
-<form action="/check_equal" method="post">
-<input type="hidden" value="<%= $random_no%>" name="g_random">
+<form action="/check_equal" method="post" onsubmit="toggle()">
+<input type="hidden" value="<%= $game.random_no%>" name="g_random">
+<input type="hidden" value="<%= $game.assessments_id%>" name="id">
 <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
 <input type="text" id="random_no" name="input_random"required>
 <button type="submit" >Enter</button>
 </form>
 </div>
-<div class="left">
-<%= render partial:"fillup_design"%>
+<div id="display" style="display:none">
+   Have you seen your name in board?
 </div>
 <script>
 function check() {
@@ -24,5 +25,9 @@ function check() {
         console.log("game_pin")
         window.location.href="assessments/game_pin";
     }
+}
+function toggle() {
+    document.getElementById("gamepin-form").style.display="none";
+     document.getElementById("display").style.display="block";
 }
 </script>
