--- a/app/views/assessments/quiz_design.html.erb
+++ b/app/views/assessments/quiz_design.html.erb
@@ -13,6 +13,7 @@
            <a href="/delete/<%=t.id%>">Delete</a>
        </div>
      <%end%>
+
      <div class="add_qtn">
         <button type="submit" id="add_question" onclick="display()">Add question</button>
     </div>
@@ -36,8 +37,11 @@
 </div>
 
      </div>
+
 </div>
+ <button type="submit" id="redirect-btn" onclick="redirect_tolibrary()">Done</button>
 <%type_of_qtn = Question.last%>
+<% if type_of_qtn%>
 <%case type_of_qtn.kind_of_question%>
 <% when "Quiz"%>
 <%= render partial:"quiz_template"%>
@@ -45,6 +49,9 @@
 <%= render partial:"tf_design"%>
 <% when "Fillup"%>
 <%= render partial:"fillup_design"%>
+<%else%>
+<%= render partial:"quiz_template"%>
+<%end%>
 <%else%>
 <%= render partial:"quiz_template"%>
 <%end%>
@@ -61,6 +68,9 @@ function uploadPic(){
     function display() {
         let div = document.getElementById("kinds_of_questions");
         div.style.display = "block";
+    }
+    function redirect_tolibrary() {
+        window.location.href="/assessments/library";
     }
 
 </script>
