--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,39 +1,28 @@
-<% logged_user = User.find(session[:id]) %>
-<% if logged_user %>
+
+<% if session[:id]%>
+<% logged_user = User.find(session[:id])%>
+
+
 <nav class="navbar navbar-expand-lg navbar-light ">
-  <!-- Container wrapper -->
+<%= image_tag("pf_logo.png", alt: "like" ,  class: "pf_logo") %>
   <div class="container-fluid">
 
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-mdb-toggle="collapse"
-      data-mdb-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <i class="fas fa-bars"></i>
-    </button>
 
     <!-- Collapsible wrapper -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <!-- Navbar brand -->
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+        <li class="nav-item home">
           <a class="nav-link" href="#">Home</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item home">
           <a class="nav-link" href="#">About</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="quiz/creategame">Quiz</a>
+        <li class="nav-item home">
+          <a class="nav-link" href="/assessments/game">Quiz</a>
         </li>
-        <li class="nav-item"  onclick="displayUser()">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-        <li class="nav-item">
+        <li class="nav-item home">
           <a class="nav-link" href="#">Review</a>
         </li>
       </ul>
@@ -52,7 +41,7 @@
           data-mdb-toggle="dropdown"
           aria-expanded="false"
         >
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M224 256c70.7 0 128-57.31 128-128s-57.3-128-128-128C153.3 0 96 57.31 96 128S153.3 256 224 256zM274.7 304H173.3C77.61 304 0 381.6 0 477.3c0 19.14 15.52 34.67 34.66 34.67h378.7C432.5 512 448 496.5 448 477.3C448 381.6 370.4 304 274.7 304z"/></svg>
+        <i class="fa-solid fa-user" id="user-icon"></i>
         </a>
         <ul
           class="dropdown-menu dropdown-menu-end"
@@ -76,15 +65,19 @@
   <!-- Container wrapper -->
 </nav>
 <%else %>
+
 <nav class="navbar navbar-expand-lg navbar-light ">
-  <div class="d-flex align-items-center">
-      <div class="dropdown">
-      <a href="users/login">
-        <button type="button" id="btn"class="btn btn-primary me-3 log" onclick = "redirect_login()">
-          Sign In
-        </button></a>
-      </div>
-    </nav>
+<%= image_tag("pf_logo.png", alt: "like" ,  class: "pf_logo") %>
+   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <!-- Navbar brand -->
+      <!-- Left links -->
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="/users/login"><i class="fa-solid fa-right-to-bracket" id="navbar-login"></i></a>
+        </li>
+    </div>
+
+</nav>
 <%end%>
 
 <script>
