--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -42,8 +42,8 @@
             <a href="login" class="register-link" style="color:#ff574e">
 Login
             </a>
+            <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
         </div>
-         <input type="hidden" name="authenticity_token" value=" form_authenticity_token ">
     </form>
     <div>
         <%=image_tag( "signup_img.webp", alt: "like", class:"signup_image" ) %>
