--- a/app/assets/stylesheets/display_question.scss
+++ b/app/assets/stylesheets/display_question.scss
@@ -23,117 +23,14 @@ body{
     font-size: 50px;
 }
 
-
-.area{
-    background: white;
-    // background: -webkit-linear-gradient(to left, #09094f, #4e54c8);
-    width: 100%;
-    height:100vh;
-
-
-}
-
-.circles{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-.circles li{
-    position: absolute;
-    display: block;
-    list-style: none;
-    width: 20px;
-    height: 20px;
-    background: #ff574e;
-    animation: animate 25s linear infinite;
-    bottom: -150px;
-
-}
-
-.circles li:nth-child(1){
-    left: 25%;
-    width: 80px;
-    height: 80px;
-    animation-delay: 0s;
-}
-
-
-.circles li:nth-child(2){
-    left: 10%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 2s;
-    animation-duration: 12s;
-}
-
-.circles li:nth-child(3){
-    left: 70%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 4s;
-}
-
-.circles li:nth-child(4){
-    left: 40%;
-    width: 60px;
-    height: 60px;
-    animation-delay: 0s;
-    animation-duration: 18s;
-}
-
-.circles li:nth-child(5){
-    left: 65%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 0s;
-}
-
-.circles li:nth-child(6){
-    left: 75%;
-    width: 110px;
-    height: 110px;
-    animation-delay: 3s;
-}
-
-.circles li:nth-child(7){
-    left: 35%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 7s;
-}
-
-.circles li:nth-child(8){
-    left: 50%;
-    width: 25px;
-    height: 25px;
-    animation-delay: 15s;
-    animation-duration: 45s;
-}
-
-.circles li:nth-child(9){
-    left: 20%;
-    width: 15px;
-    height: 15px;
-    animation-delay: 2s;
-    animation-duration: 35s;
-}
-
-.circles li:nth-child(10){
-    left: 85%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 0s;
-    animation-duration: 11s;
+.disp_quiz {
+    margin-left: 200px;
 }
 .disp_qtn {
     margin-top: 150px;
     font-size:40px;
     text-align: center;
-    background-color: #DF4C44;
+    background-color: #428957;
     padding: 10px 10px;
     border-radius: 20px;
     color:white;
@@ -141,9 +38,36 @@ body{
     width: 700px;
     height: 100px;
 }
+.answer-sidebar {
+    background-color: #428957 ;
+    width: 20%;
+    margin-top: 5%;
+    height: 92vh;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    position:fixed;
+}
+.reports-img {
+    height: 300px;
+    width: 350px;
+    margin-top: 100px;
+}
+.report-content{
+    margin-top: 400px;
+    text-align: center;
+    margin-left: -300px;
+    color: white;
+    font-weight:bold;
+    font-size: 30px;
+}
+.next-btn {
+    border: none;
+    outline:none;
+    padding: 20px 20px;
+}
  .disp_row div {
     display:inline-flex;
-    background-color: #DF4C44;
+    background-color: #428957;
     padding: 10px 10px;
     margin-top:100px;
     text-align: center;
@@ -152,6 +76,7 @@ body{
     width: 500px;
     height: 100px;
     border-radius: 20px;
+    font-size: 30px
 }
 .disp_row input{
   background-color: transparent;
@@ -159,20 +84,19 @@ body{
   font-weight: bold;
   border: none;
   outline:none;
-
-
 }
 .disp_row_fillup div {
     display:inline-flex;
-    background-color: #DF4C44;
+    background-color: #428957;
     padding: 10px 10px;
     margin-top:100px;
     text-align: center;
     color:white;
-    margin-left: 300px;
+    margin-left: 600px;
     width: 500px;
     height: 100px;
     border-radius: 20px;
+    font-size: 30px;
 }
 .disp_row_fillup input {
     height: 60px;
