--- a/app/assets/stylesheets/play.scss
+++ b/app/assets/stylesheets/play.scss
@@ -50,6 +50,16 @@
    margin-right: 20px;
    font-weight: bold;
    font-size: 30px;
-
-
+}
+.start-btn {
+    border:none;
+    outline:none;
+    margin-left:100%;
+    background-color:#2c4c3c;
+    color:#f1eac2;
+    padding: 20px 20px;
+    font-weight: bold;
+    border-radius: 20px;
+    font-size: 25px;
+    width:200px;
 }
