reports page added

--- a/app/views/reports/display_questions.html.erb
+++ b/app/views/reports/display_questions.html.erb
@@ -7,23 +7,19 @@
 <div class="report-content">
 Keep up !! <br>
 Rocking   <i class="fa-solid fa-star-and-crescent"></i><br>
-<% score = record.score.to_i%>
-<%= score+record.score%>
 </div>
 <%else%>
 <%= image_tag('encourage.png',class:"reports-img")%>
 <div class="report-content">
 Keep fighting!! <br>
 Stay strong <i class="fa-solid fa-hand-back-fist"></i><br>
-<% score = record.score.to_i%>
-<%= score+record.score%>
 </div>
 <%end%>
 </div>
 </div>
 <%# <div class="answer"> %>
 <div id="disp_questions">
-<div id="time_count">1 '${con}'
+<div id="time_count">1 
 </div>
 <%for t in $record do %>
 <div class="disp_quiz" style="display:none;">
