--- a/app/assets/stylesheets/play.scss
+++ b/app/assets/stylesheets/play.scss
@@ -63,3 +63,66 @@
     font-size: 25px;
     width:200px;
 }
+#gamepin-form {
+    background-color: #428957;
+    background-size: 100% 100%;
+    height: 980px;
+    width: 100%;
+    position: fixed;
+
+}
+#gamepin-form .random-inputs{
+  margin-left:35%;
+margin-top: 20%;
+background-color: rgb(227, 255, 223);
+padding: 20px 20px;
+width: 450px;
+border-radius: 20px;
+
+}
+.random-inputs button {
+    border:none;
+    outline:none;
+    background-color:#2c4c3c;
+    color:#f1eac2;
+    padding: 20px 20px;
+    font-weight: bold;
+    border-radius: 20px;
+    font-size: 25px;
+    width:150px;
+    text-align: center;
+    padding: 10px 10px;
+    margin-left: 30%;
+    margin-top: 3%;
+
+}
+
+.random-inputs input {
+    border:none;
+    outline:none;
+    padding: 10px 10px;
+    font-weight: bold;
+    border-radius: 20px;
+    font-size: 25px;
+    width:400px;
+    text-align: center;
+    color:#2c4c3c
+}
+.random-inputs ::placeholder {
+    color:#2c4c3c
+}
+
+#aftgamepin-display {
+    background-color: #428957;
+    background-size: 100% 100%;
+    height: 980px;
+    width: 100%;
+    position: fixed;
+}
+#aftgamepin-display .content {
+    text-align: center;
+    color:#f1eac2;
+    font-size: 35px;
+    font-weight:bold;
+    margin-top: 12%;
+}
