--- a/app/views/assessments/dashboard.html.erb
+++ b/app/views/assessments/dashboard.html.erb
@@ -1,8 +1,10 @@
 <div class="reports">
+<%= pie_chart Report.group(:score).count %>
+<%= line_chart User.group_by_day(:created_at).count %>
+
 <% logged_user = User.find(session[:id]) %>
 <% if logged_user %>
 <div class="dashboard">Swetha</div>
-<canvas id="myChart" width="200px" height="100px" data-labels="<%= @data_keys %>" data-data="<%= @data_values %>" ></canvas>
 
 <div class="reports_table">
 <table class="table table-hover">
@@ -16,11 +18,8 @@
     </tr>
   </thead>
   <tbody>
-
-
-
     <tr>
-      <th scope="row"><%= logged_user.name%></th>
+      <th scope="row"><a href="/reports/<%=logged_user.id%>"><%= logged_user.name%></a></th>
       <td><%=Report.where("users_id=? AND score=?" , logged_user.id , 100).count%></td>
       <td><%=Report.where("users_id=? AND score=?" , logged_user.id , 0).count%></td>
       <td><%=Report.where("users_id=? AND score=?" , 1 , 100).sum(:score)%></td>
