About page designed

--- a/app/views/assessments/_disp_qtns.html.erb
+++ b/app/views/assessments/_disp_qtns.html.erb
@@ -35,7 +35,7 @@ Stay strong <i class="fa-solid fa-hand-back-fist"></i><br>
 <div class="disp_opts">
 <div class="disp_row">
 
-        <div class="disp opt1"><input type="submit" name="user_answer" value="<%=t.option1%>" ></div>
+        <div class="disp opt2"><input type="submit" name="user_answer" value="<%=t.option1%>" ></div>
         <div class="disp opt2"><input type="submit" name="user_answer" value="<%=t.option2%>"></div>
 </div>
 </div>
@@ -52,7 +52,7 @@ Stay strong <i class="fa-solid fa-hand-back-fist"></i><br>
 </div>
 <div class="disp_opts">
 <div class="disp_row_fillup">
-        <div class="disp opt1"><input type="text" name="user_answer"><button  type="submit" class="next-btn">Next</button></div>
+        <div class="disp opt1"><input id="fillup-ans" type="text" name="user_answer"><button  type="submit" class="next-btn">Next</button></div>
 </div>
 </div>
 </form>
@@ -70,7 +70,7 @@ Stay strong <i class="fa-solid fa-hand-back-fist"></i><br>
 
        <div class="disp_row">
 
-            <div class="disp opt1">
+            <div class="disp opt2">
               <input type="submit" name="user_answer" value="<%=t.option1%>" >
             </div>
 
