--- a/app/assets/stylesheets/display_question.scss
+++ b/app/assets/stylesheets/display_question.scss
@@ -39,21 +39,19 @@ body{
     height: 100px;
 }
 .answer-sidebar {
-    background-color: #428957 ;
+    background-color: #428957;
     width: 20%;
-    margin-top: 5%;
-    height: 92vh;
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
-    position:fixed;
+    margin-top: 0;
+    height: 100vh;
+    position: fixed;
 }
 .reports-img {
     height: 300px;
     width: 350px;
-    margin-top: 100px;
+    margin-top: 65%;
 }
 .report-content{
-    margin-top: 400px;
+    top: 60%;
     text-align: center;
     margin-left: -300px;
     color: white;
@@ -104,7 +102,19 @@ body{
     border-radius: 20px;
     border:none;
 }
-
+.disp_row_fillup button{
+    width:20%;
+    height:50%;
+    border:none;
+    outline:none;
+    background-color: #162f1d;
+    color:white;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 20px;
+    margin-left: 5%;
+    padding-bottom:15%;
+}
 .radio_p{
     margin-left: 60px;
     margin-top: 12px;
@@ -125,5 +135,20 @@ body{
         border-radius: 50%;
     }
 
+}
+
+#time_count input{
+    border-radius: 50%;
+    width:60px;
+    height:50px;
+    background-color: #428957;
+    padding: 1%;
+    margin-left: 90%;
+    margin-top: 1%;
+    border:none;
+    color:white;
+    outline: none;
+    text-align: center;
+    font-weight: bold;
 }
 
