--- a/app/assets/stylesheets/quiz.scss
+++ b/app/assets/stylesheets/quiz.scss
@@ -149,15 +149,16 @@
                             background: transparent;
                             color: #2c4c3c;
                             font-weight: bold;
-                            border-radius: 20px;
+                            border-radius: 5px;
                             background-color: #2c4c3c;
-                            color: #f1eac2;
+                            color: white;
                             margin-bottom: 10px;
+                            border: none;
                         }
 
                         #add_question:hover {
                             background-color: #2c4c3c;
-                            color: #f1eac2;
+                            color: white;
                         }
 
                         #kinds_of_questions div {
