--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -1,17 +1,27 @@
 // Place all the styles related to the reports controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
 .reports {
+
     display: flex;
 }
+.reports_page .charts {
+    height: 400px;
+    width: 600px;
+    margin-top: 5%;
+}
+.reports_page{
+    margin-top: 5%;
+}
 .dashboard {
-    height:100%;
-    width: 25%;
+    // margin-top: 20%;
     background: green;
 }
 .reports_table {
-    width: 100%;
-    margin-top: 20%;
+    width: 60%;
+    margin-top: 5%;
+    margin-left: 25%;
 
 }
 
