--- a/app/views/assessments/_fillup_design.html.erb
+++ b/app/views/assessments/_fillup_design.html.erb
@@ -8,7 +8,7 @@
         <input type="hidden" name="assessments_id" value="<%=$puzzles.assessments_id%>">
             <div class="ques-icon-div" onclick="uploadPic()"><i class="fa-solid fa-image" id="img-icon"></i>
            </div>
-           <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."><%= $puzzles.question%></textarea></div>
+           <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."required><%= $puzzles.question%></textarea></div>
            <div  id="f-upload" class="display" style="display: none;"><input type="file" name="images"></div>
            </div>
 
@@ -16,7 +16,7 @@
         <div class="disp_opts">
           <div class="quiz_row">
 
-           <div class="disp opt1"><input type="text" name="option1"  placeholder="Type answer here ..." value="<%=$puzzles.answer%>"></div>
+           <div class="disp opt2" ><input type="text" name="option1"  placeholder="Type answer here ..." value="<%=$puzzles.answer%>"required></div>
           </div>
         </div>
 
@@ -39,7 +39,7 @@
 
             <div class="ques-icon-div" onclick="uploadPic()"><i class="fa-solid fa-image" id="img-icon"></i>
            </div>
-           <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."></textarea></div>
+           <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."required></textarea></div>
            <div  id="f-upload" class="display" style="display: none;"><input type="file" name="images"></div>
            </div>
 
@@ -47,16 +47,14 @@
         <div class="disp_opts">
           <div class="quiz_row">
 
-           <div class="disp opt1"><input type="text" name="option1"  placeholder="Type answer here ..."></div>
+           <div class="disp opt1"><input type="text" name="option1"  placeholder="Type answer here ..."required></div>
           </div>
         </div>
 
         </div>
         </div>
-    <div class="btn-ques-div">
-      <button id="cancel-btn">Cancel</button>
-      <button type="submit" id="submit-btn">Submit</button></form>
-    </div>
+      <button type="submit" id="submit-btn1">Submit</button></form>
+
     </form>
 </div>
 </div>
