--- a/app/views/assessments/_tf_design.html.erb
+++ b/app/views/assessments/_tf_design.html.erb
@@ -10,15 +10,15 @@
 
            <div class="ques-icon-div" onclick="uploadPic()"><i class="fa-solid fa-image" id="img-icon"></i>
            </div>
-           <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."><%= $puzzles.question%></textarea></div>
+           <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."required><%= $puzzles.question%></textarea></div>
            <div  id="f-upload" class="display" style="display:none"><input type="file" name="images"></div>
         </div>
         <div class="answer-type-area">
         <div class="disp_opts">
           <div class="quiz_row">
 
-           <div class="disp opt1"><input type="radio" name="option"  value="<%=$puzzles.answer%>"><input type="text" name="option1" value="<%=$puzzles.option1%>" placeholder="Add answer 1"></div>
-           <div class="disp opt2"><input type="radio" name="option"  value="<%=$puzzles.answer%>"><input type="text" name="option2" value="<%=$puzzles.option2%>" placeholder="Add answer 2"></div>
+           <div class="disp opt1"><input type="radio" name="option"  value="<%=$puzzles.answer%>" required><input type="text" name="option1" value="<%=$puzzles.option1%>" placeholder="Add answer 1" required></div>
+           <div class="disp opt2"><input type="radio" name="option"  value="<%=$puzzles.answer%>" required><input type="text" name="option2" value="<%=$puzzles.option2%>" placeholder="Add answer 2" required></div>
           </div>
         </div>
         </div>
@@ -41,15 +41,15 @@
 
            <div class="ques-icon-div" onclick="uploadPic()"><i class="fa-solid fa-image" id="img-icon"></i>
            </div>
-           <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."></textarea></div>
+           <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."required></textarea></div>
            <div  id="f-upload" class="display" style="display: none;"><input type="file" name="images"></div>
         </div>
         <div class="answer-type-area">
         <div class="disp_opts">
           <div class="quiz_row">
 
-           <div class="disp opt1"><input type="radio" name="option" value="a"><input type="text" name="option1"  value="TRUE" placeholder="Add answer 1"></div>
-           <div class="disp opt2"><input type="radio" name="option" value="b"><input type="text" name="option2"  value="FALSE"placeholder="Add answer 2"></div>
+           <div class="disp opt1"><input type="radio" name="option" value="a"required><input type="text" name="option1"  value="TRUE" placeholder="Add answer 1"required></div>
+           <div class="disp opt2"><input type="radio" name="option" value="b"required><input type="text" name="option2"  value="FALSE"placeholder="Add answer 2"required></div>
           </div>
         </div>
 
