Fixed sonar cloud bugs

--- a/app/assets/stylesheets/creategame.scss
+++ b/app/assets/stylesheets/creategame.scss
@@ -250,16 +250,16 @@
         padding-top: 10%
     }
 
-    .assessment-form .submit {
-        border: none;
-        outline: none;
-        border-radius: 20px;
-        font-weight: bold;
-        font-size: 20px;
-        width: 200px;
-        padding: 10px 10px;
-        margin-left: 100px;
-    }
+    // .assessment-form .submit {
+    //     border: none;
+    //     outline: none;
+    //     border-radius: 20px;
+    //     font-weight: bold;
+    //     font-size: 20px;
+    //     width: 200px;
+    //     padding: 10px 10px;
+    //     margin-left: 100px;
+    // }
 
     .assessment_title {
         margin-left: -10%;
