--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -41,7 +41,7 @@
           data-mdb-toggle="dropdown"
           aria-expanded="false"
         >
-        <i class="fa-solid fa-user" id="user-icon"></i>
+        <em class="fa-solid fa-user" id="user-icon"></em>
         </a>
         <ul
           class="dropdown-menu dropdown-menu-end"
@@ -73,7 +73,7 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="/users/login"><i class="fa-solid fa-right-to-bracket" id="navbar-login"></i></a>
+          <a class="nav-link" href="/users/login"><em class="fa-solid fa-right-to-bracket" id="navbar-login"></em></a>
         </li>
     </div>
 
