--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -7,11 +7,11 @@
 <div class="contact_form">
     <form class="inline">
         <div class="input-icons">
-            <i class="fa fa-user icon"></i>
+            <em class="fa fa-user icon"></em>
             <input class="input-field" type="text" placeholder="name"><br>
-            <i class="fa fa-envelope icon"></i>
+            <em class="fa fa-envelope icon"></em>
             <input class="input-field" type="email" placeholder="abc1@fwsa.in"><br>
-            <i class="fa fa-messages icon" style="color:white"></i>
+            <em class="fa fa-messages icon" style="color:white"></em>
             <%# <i class="fa-solid fa-messages" style="color:red"></i> %>
             <textarea class="input-field" type="text" style="height: 200px; width: 400px" placeholder="Type message here . . ."></textarea><br>
         </div>
