--- a/app/views/quiz/form.html.erb
+++ b/app/views/quiz/form.html.erb
@@ -10,7 +10,7 @@
    <textarea placeholder="    Assessment description" name="description" > </textarea><br>
 
    <div class="upload">
-   <i class="fa-solid fa-image" id="icon"></i><br>
+   <em class="fa-solid fa-image" id="icon"></em><br>
    <input type="file"name="images" class="file-input" title="Select images here"><br>
    </div><br>
   <button type="submit" class="submit">Next</button>
