--- a/app/views/reports/display_questions.html.erb
+++ b/app/views/reports/display_questions.html.erb
@@ -6,20 +6,20 @@
 <%= image_tag('Awards.png' ,class:"reports-img")%>
 <div class="report-content">
 Keep up !! <br>
-Rocking   <i class="fa-solid fa-star-and-crescent"></i><br>
+Rocking   <em class="fa-solid fa-star-and-crescent"></em><br>
 </div>
 <%else%>
 <%= image_tag('encourage.png',class:"reports-img")%>
 <div class="report-content">
 Keep fighting!! <br>
-Stay strong <i class="fa-solid fa-hand-back-fist"></i><br>
+Stay strong <em class="fa-solid fa-hand-back-fist"></em><br>
 </div>
 <%end%>
 </div>
 </div>
 <%# <div class="answer"> %>
 <div id="disp_questions">
-<div id="time_count">1 
+<div id="time_count">1
 </div>
 <%for t in $record do %>
 <div class="disp_quiz" style="display:none;">
