--- a/app/views/users/forgot_pwd.html.erb
+++ b/app/views/users/forgot_pwd.html.erb
@@ -3,7 +3,7 @@
     <form class="form-box px-3" action="/create-session" method="post">
         <input type="hidden" name="authenticity_token" value=" form_authenticity_token ">
         <div class="form-input">
-            <span><i class="fa fa-envelope-o"></i></span>
+            <span><em class="fa fa-envelope-o"></em></span>
             <input type="email" name="users[email]" placeholder="Mail Address" tabindex="10" required>
         </div>
 
