--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -3,11 +3,11 @@
     <form class="form-box px-3" action="/create-session" method="post">
         <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
         <div class="form-input">
-            <span><i class="fa fa-envelope-o"></i></span>
+            <span><em class="fa fa-envelope-o"></em></span>
             <input type="email" name="email" placeholder="Mail Address" tabindex="10" required>
         </div>
         <div class="form-input">
-            <span><i class="fa-solid fa-key"></i></span>
+            <span><em class="fa-solid fa-key"></em></span>
             <input type="password" name="password" placeholder="Password" required>
         </div>
         <div class="mb-3">
