--- a/app/views/assessments/dashboard.html.erb
+++ b/app/views/assessments/dashboard.html.erb
@@ -17,6 +17,7 @@
 
 <div class="reports_table">
 <table class="table table-hover">
+  <caption style="display:none">Dashboard</caption>
   <thead>
     <tr>
       <th scope="col">Name</th>
