--- a/app/views/home/review.html.erb
+++ b/app/views/home/review.html.erb
@@ -2,12 +2,12 @@
 <div class="review_form">
 <form class="inline">
         <div class="input-icons">
-            <i class="fa fa-user icon"></i>
+            <em class="fa fa-user icon"></em>
             <input class="input-field" type="text" placeholder="name"><br>
-            <i class="fa fa-envelope icon"></i>
+            <em class="fa fa-envelope icon"></em>
             <input class="input-field" type="email" placeholder="abc1@fwsa.in"><br>
-            <i class="fa fa-messages icon" style="color:white"></i>
-          <i class="fa-solid fa-messages" style="color:red"></i>
+            <em class="fa fa-messages icon" style="color:white"></em>
+          <em class="fa-solid fa-messages" style="color:red"></em>
             <textarea class="input-field" type="text" style="height: 200px; width: 400px" placeholder="Type message here . . ."></textarea><br>
         </div>
   </form>
