--- a/app/views/quiz/game1.html.erb
+++ b/app/views/quiz/game1.html.erb
@@ -12,7 +12,7 @@
 
             <%end%>
     </div>
-    <span><i class="fa-solid fa-timer"></i></span>
+    <span><em class="fa-solid fa-timer"></em></span>
        <% if $cur_display_question%>
             <% case $cur_display_question.kind_of_question%>
                <%when "Quiz"%>
