--- a/app/views/reports/display_reports.html.erb
+++ b/app/views/reports/display_reports.html.erb
@@ -6,7 +6,7 @@
 
 <div class="reports_table">
 <table class="table table-hover">
-
+<caption style="display:none">Table</caption>
   <thead>
     <tr>
       <th scope="col"></th>
