--- a/app/views/users/other_index.html.erb
+++ b/app/views/users/other_index.html.erb
@@ -18,23 +18,23 @@ Create new account.<br>
                         <form class="form-box px-3" action="/save" method="post" onsubmit="check()">
                             <input type="hidden" name="authenticity_token" value=" form_authenticity_token ">
                             <div class="form-input">
-                                <span><i class="fa-solid fa-user"></i></span>
+                                <span><em class="fa-solid fa-user"></em></span>
                                 <input type="text" name="users[name]" placeholder="Username" tabindex="10" required>
                             </div>
                             <div class="form-input">
-                                <span><i class="fa fa-envelope-o"></i></span>
+                                <span><em class="fa fa-envelope-o"></em></span>
                                 <input type="email" name="users[email]" placeholder="Mail Address" tabindex="10" required>
                             </div>
                             <div class="form-input">
-                                <span><i class="fa-solid fa-mobile"></i></span>
+                                <span><em class="fa-solid fa-mobile"></em></span>
                                 <input type="email" name="users[phone_no]" placeholder="Phone number" tabindex="10" required>
                             </div>
                             <div class="form-input">
-                                <span><i class="fa-solid fa-key"></i></span>
+                                <span><em class="fa-solid fa-key"></em></span>
                                 <input type=" password" name="users[password]" placeholder="Create Password" required>
                             </div>
                             <div class="form-input">
-                                <span><i class="fa-solid fa-key"></i></span>
+                                <span><em class="fa-solid fa-key"></em></span>
                                 <input type="password" name="" placeholder="Confirm Password" required>
                             </div>
                             <div class="mb-3">
@@ -61,11 +61,11 @@ Create new account.<br>
                                 <form class="form-box px-3" action="/create-session" method="post">
                                     <input type="hidden" name="authenticity_token" value=" form_authenticity_token ">
                                     <div class="form-input">
-                                        <span><i class="fa fa-envelope-o"></i></span>
+                                        <span><em class="fa fa-envelope-o"></em></span>
                                         <input type="email" name="users[email]" placeholder="Mail Address" tabindex="10" required>
                                     </div>
                                     <div class="form-input">
-                                        <span><i class="fa-solid fa-key"></i></span>
+                                        <span><em class="fa-solid fa-key"></em></span>
                                         <input type="password" name="users[email]" placeholder="Password" required>
                                     </div>
                                     <div class="mb-3">
