Routes changed and aligned some pages

--- a/app/assets/stylesheets/quiz_design.scss
+++ b/app/assets/stylesheets/quiz_design.scss
@@ -251,6 +251,69 @@
         outline: none;
     }
 
+
+    // .sec-div{
+    //     width: 100%;
+    //     margin-bottom: 10px;
+    // }
+
+    // .sec-div em{
+        // position: absolute;
+    //     font-size: 40px;
+    //     color: #21502f;
+    // }
+
+    // #timer-input {
+    //     background-color: #88c681;
+    //     font-weight: bold;
+    //     color: #104930;
+    //     border: none;
+    //     outline: none;
+    //     height: 30px;
+    //     text-indent: 20px;
+    //     padding: 10px 10px;
+    //     width: 20%;
+    //     height: 5%;
+    //     font-size: 1.5rem;
+    //     text-align: center;
+    //     margin-left: 80%;
+    // }
+
+    .sec-div em {
+        position: absolute;
+        font-size: 40px;
+        color: #21502f;
+        margin-left: 70%;
+    }
+
+    .sec-div {
+        width: 100%;
+    }
+
+    #timer {
+        padding-right: 2%;
+        padding-top: .5%;
+        padding-bottom: 2%;
+        min-width: 40px;
+    }
+
+    #timer-input {
+        background-color: #88c681;
+        font-weight: bold;
+        color: #104930;
+        border: none;
+        outline: none;
+        height: 30px;
+        text-indent: 20px;
+        padding: 10px 10px;
+        width: 30%;
+        height: 5%;
+        font-size: 1.5rem;
+        text-align: center;
+        margin-left: 70%;
+    }
+
+
     .tf div {
         align-self: center;
     }
@@ -258,6 +321,7 @@
     .left {
         left: 200px;
     }
+
 .question_type_area #f-upload{
     width:70%;
     height: 20%;
