--- a/app/views/assessments/_disp_qtns.html.erb
+++ b/app/views/assessments/_disp_qtns.html.erb
@@ -1,8 +1,8 @@
 <div class="answer-sidebar">
 <div class="reports">
-<%record = Report.last%>
+<%reco = Report.last%>
 
-<%if record.score == 100%>
+<%if reco.score == 100%>
 <%= image_tag('Awards.png' ,class:"reports-img")%>
 <div class="report-content">
 Keep up !! <br>
@@ -20,11 +20,12 @@ Stay strong <em class="fa-solid fa-hand-back-fist"></em><br>
 <%# <div class="answer"> %>
 <div id="disp_questions">
 
-<%for t in record do %>
+<%$record.each do |t|%>
 <div class="disp_quiz" style="display:none;">
 <% if t.kind_of_question=="True or false"%>
 <form action="/reports_save" method="post" onsubmit="report()">
-<div id="time_count"><input type="text" value="1" id="timer-inp" name="time_limit">
+<div id="time_count"><input type="text" value="<%= t.time%>" id="timer-inp" name="time_limit">
+   <span class="timer_quiz" id="time-span"><%= t.time %> </span>
 </div>
 <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
 <input type="hidden" name="id" value ="<%= t.id%>">
@@ -42,7 +43,8 @@ Stay strong <em class="fa-solid fa-hand-back-fist"></em><br>
 </form>
 <%elsif t.kind_of_question=="Fillup"%>
 <form action="/reports_save"  onsubmit="report()"method="post">
-<div id="time_count"><input type="text" value="1" id="timer-inp" name="time_limit">
+<div id="time_count"><input type="text" value="<%= t.time%>"id="timer-inp" name="time_limit">
+   <span class="timer_quiz" id="time-span"><%= t.time %> </span>
 </div>
 <input type="hidden" name="id" value ="<%= t.id%>">
 <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
@@ -58,7 +60,8 @@ Stay strong <em class="fa-solid fa-hand-back-fist"></em><br>
 </form>
 <%else%>
        <form action ="/reports_save" method="post" >
-       <div id="time_count"><input type="text" value="1" id="timer-inp" name="time_limit">
+       <div id="time_count"><input type="text" value="<%= t.time %>" id="timer-inp" name="time_limit">
+       <span class="timer_quiz" id="time-span"> <%= t.time %> </span>
 </div>
        <input type="hidden" name="id" value ="<%= t.id%>">
        <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
@@ -90,11 +93,11 @@ Stay strong <em class="fa-solid fa-hand-back-fist"></em><br>
         </div>
 </div>
 
-<%end%>
+
 </div>
 
 
-<%end%>
+
 </div>
 
 
@@ -137,8 +140,26 @@ function timerss(){
 timerss();
     }, 30000);
 }
+let time = document.getElementById("time-span").innerText;
+    const countdownEl = document.getElementById("time-span");
+    setInterval(updateCountdown, 1000);
+
+    function updateCountdown() {
+        const sec = time % 60;
+        countdownEl.innerHTML = `${sec}`;
+        time--;
+
+        if (countdownEl.innerHTML == 0) {
+                document.getElementById('time-span').style.display = "none";
+                // recognition.abort();
+                isListening = false;
+
+            }
+    }
 function report() {
   window.location.href="/reports_save";
 }
 
 </script>
+<%end%>
+<%end%>
