--- a/app/views/assessments/quiz_design.html.erb
+++ b/app/views/assessments/quiz_design.html.erb
@@ -71,7 +71,7 @@ function uploadPic(){
         div.style.display = "block";
     }
     function redirect_tolibrary() {
-        window.location.href="/assessments/library";
+        window.location.href="/library";
     }
 
 </script>
